[Chromoing] Fix DCHECK when shutting down It2Me host from client side

This change is to fix a DCHECK issue in It2Me scenario. remote_assistance_host
triggers a DCHECK failure if client disconnects the connection. So this change
modified It2MeHost::Shutdown function to return directly if current state is
kDisconnected. See bug for details.

BUG=617474

Review-Url: https://codereview.chromium.org/2040353002
Cr-Commit-Position: refs/heads/master@{#398783}

Former-commit-id: f36aac5517dc426a97f23531fd5291aff982dc50